bonus/manifests/gitlab_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gitlab-ingress
    namespace: gitlab
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
    tls:
        - hosts:
            - gitlab.local
          secretName: gitlab-tls
    rules:
        - host: gitlab.local
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: gitlab-webservice-default
                        port:
                            number: 8080
